# med-stat

./: .gitignore  README.md  conftest.py  pyproject.toml  settings.py
docs/app/: BUILD.md  DEV.md
docs/domain/: INFO.md
src/: logger.py
src/app/: __init__.py
src/app/cli/: dir.py  from_file.py  utils.py
src/app/ui/: __init__.py  main.py  state.py
src/app/ui/components/: action_button.py  actionbar.py  composite_widget.py  file_select.py  line.py  messages.py
src/app/ui/flux/: actions.py  reducers.py
src/app/ui/workers/: export_worker.py  load_worker.py  threads.py
src/domain/: exceptions.py  load_result.py  range.py  schemas.py  stats.py
src/domain/models/: __init__.py  fields.py  measurable.py  measurement.py  measurement_pair.py  object_group.py  object_side_group.py
src/graph/: differ.py  dots.py  model.py  utils.py
src/services/: csv_reader.py  grouper.py  pairset_builder.py
src/services/dao/: __init__.py  measurements.py
src/services/stat/: func.py  pair.py  pairset.py
src/services/usecases/: __init__.py  graph.py  load.py  stat.py  xls.py
src/services/xls/: pairset.py
src/store/: __init__.py
src/utils/: __init__.py
src/xls/: __init__.py  builder.py  headers.py  values.py
