[tool.poetry]
name = "med-stat"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.9"
PyQt6 = "^6.2.2"
marshmallow = "^3.14.1"
marshmallow-dataclass = "^8.5.3"
statistics = "^1.0.3"
matplotlib = "^3.5.1"
XlsxWriter = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pyinstaller = "^4.8"
mypy = "^0.931"


[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
strict_optional = false


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
